syntax = "proto3";

package go.micro.srv.register;

service Register {
	rpc SmsCode(Request) returns (Response) {}
	rpc RegisCode(Regrequest) returns (Regresponse) {}
	rpc LoginPost(LoginRequest) returns (LoginRegresponse) {}
}


message Request {
	string mobile = 1;
	string text = 2;
	string uuid = 3;
}

message Response {
	string errno = 1;
	string errmsg = 2;
}
message Regrequest {
	string mobile =1;
	string password=2;
	string sms_code=3;
}

message Regresponse{
	string errno = 1;
	string errmsg = 2;
}

message LoginRequest {
	string mobile =1;
	string password	=2;
}

message LoginRegresponse {
	string errno =1;
	string errmsg =2;
	string name =3;
}



